# tricore-toolchain

./: CMakeLists.txt  README.md
